--- a/data_creator.ipynb
+++ b/data_creator.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, cv2\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
     "\n",
     "family_id = 0\n",
     "id = 0\n",
-    "columns = ['id', 'familyId', 'familyName', 'file', 'path']\n",
+    "columns = ['id', 'familyId', 'familyName', 'file', 'path', 'height', 'width']\n",
     "temp_data = []\n",
     "for folder in os.listdir(base_path):\n",
     "  if ('.txt' in folder): continue\n",
@@ -61,7 +61,9 @@
     "  full_path = base_path + folder + '/'\n",
     "  for file in os.listdir(full_path):\n",
     "    full_file_path = full_path + file\n",
-    "    temp_data.append([id, family_id, folder, file, full_file_path])\n",
+    "    img = cv2.imread(full_file_path, cv2.IMREAD_UNCHANGED)\n",
+    "    height, width = img.shape\n",
+    "    temp_data.append([id, family_id, folder, file, full_file_path, height, width])\n",
     "    count += 1\n",
     "    id += 1\n",
     "\n",
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
        "25"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
